Update absolutely everything